--- a/components/libc/compilers/newlib/SConscript
+++ b/components/libc/compilers/newlib/SConscript
@@ -9,7 +9,7 @@ group = []
 LIBS = ['m'] # link libm
 CPPPATH = [cwd]
 
-if rtconfig.PLATFORM == 'gcc':
+if rtconfig.PLATFORM == 'gcc' and GetGCCLibc(rtconfig) == 'newlib':
     LIBS += ['c'] # link libc
     src += Glob('*.c')
 
