[bsp] Switch qemu-vexpress-a9 sample to picolibc
This adds the necessary changes to the linker script and
then selects picolibc instead of the default (newlib).

Before:
   text	   data	    bss	    dec	    hex	filename
 561638	   2100	  84928	 648666	  9e5da	rtthread.elf

After:
   text	   data	    bss	    dec	    hex	filename
 525009	    692	  86844	 612545	  958c1	rtthread.elf

Signed-off-by: Keith Packard <keithp@keithp.com>

--- a/bsp/qemu-vexpress-a9/.config
+++ b/bsp/qemu-vexpress-a9/.config
@@ -30,9 +30,12 @@ CONFIG_RT_TIMER_THREAD_STACK_SIZE=1024
 #
 # kservice optimization
 #
-# CONFIG_RT_KSERVICE_USING_STDLIB is not set
+CONFIG_RT_KSERVICE_USING_STDLIB=y
+CONFIG_RT_KSERVICE_USING_STDLIB_MEMCPY=y
+CONFIG_RT_KSERVICE_USING_STDLIB_MEMSET=y
 # CONFIG_RT_KSERVICE_USING_TINY_SIZE is not set
 # CONFIG_RT_USING_TINY_FFS is not set
+CONFIG_RT_KSERVICE_USING_PRINTF=y
 # CONFIG_RT_PRINTF_LONGLONG is not set
 CONFIG_RT_DEBUG=y
 CONFIG_RT_DEBUG_COLOR=y
