--- a/src/Kconfig
+++ b/src/Kconfig
@@ -149,6 +149,10 @@ menu "kservice optimization"
         bool "Enable kservice to use tiny finding first bit set method"
         default n
 
+    config RT_KSERVICE_USING_PRINTF
+	bool "Enable kservice to use libc printf"
+	default n
+
     config RT_PRINTF_LONGLONG
         bool "Enable rt_printf-family functions to support long long format"
         default n
