--- a/bsp/qemu-vexpress-gemini/.config
+++ b/bsp/qemu-vexpress-gemini/.config
@@ -26,10 +26,14 @@ CONFIG_IDLE_THREAD_STACK_SIZE=512
 #
 # kservice optimization
 #
-# CONFIG_RT_KSERVICE_USING_STDLIB is not set
+CONFIG_RT_KSERVICE_USING_STDLIB=y
+CONFIG_RT_KSERVICE_USING_STDLIB_MEMCPY=y
+CONFIG_RT_KSERVICE_USING_STDLIB_MEMSET=y
 # CONFIG_RT_KSERVICE_USING_TINY_SIZE is not set
 # CONFIG_RT_USING_TINY_FFS is not set
+CONFIG_RT_KSERVICE_USING_PRINTF=y
 # CONFIG_RT_PRINTF_LONGLONG is not set
+# CONFIG_RT_PRINTF_FLOAT is not set
 CONFIG_RT_DEBUG=y
 CONFIG_RT_DEBUG_COLOR=y
 # CONFIG_RT_DEBUG_INIT_CONFIG is not set
